# uzuki2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  Dummy_8hpp.html  Dummy_8hpp__dep__incl.map  Dummy_8hpp__dep__incl.md5  Dummy_8hpp__incl.map  Dummy_8hpp__incl.md5  Dummy_8hpp_source.html  ParsedList_8hpp.html  ParsedList_8hpp__dep__incl.map  ParsedList_8hpp__dep__incl.md5  ParsedList_8hpp__incl.map  ParsedList_8hpp__incl.md5  ParsedList_8hpp_source.html  annotated.html  classHdf5Parser-members.html  classHdf5Parser.html  classes.html  classuzuki2_1_1Base-members.html  classuzuki2_1_1Base.html  classuzuki2_1_1Base__inherit__graph.map  classuzuki2_1_1Base__inherit__graph.md5  classuzuki2_1_1BooleanVector-members.html  classuzuki2_1_1BooleanVector.html  classuzuki2_1_1BooleanVector__inherit__graph.map  classuzuki2_1_1BooleanVector__inherit__graph.md5  classuzuki2_1_1DummyExternals-members.html  classuzuki2_1_1DummyExternals.html  classuzuki2_1_1External-members.html  classuzuki2_1_1External.html  classuzuki2_1_1External__coll__graph.md5  classuzuki2_1_1External__inherit__graph.map  classuzuki2_1_1Factor-members.html  classuzuki2_1_1Factor.html  classuzuki2_1_1Factor__coll__graph.map  classuzuki2_1_1Factor__coll__graph.md5  classuzuki2_1_1Hdf5Parser-members.html  classuzuki2_1_1Hdf5Parser.html  classuzuki2_1_1IntegerVector-members.html  classuzuki2_1_1IntegerVector.html  classuzuki2_1_1IntegerVector__inherit__graph.map  (+165 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  files_1.js  files_2.js  files_3.js  files_6.js  (+39 more)
docs/specifications/: build.R  hdf5-1.0.md  hdf5-1.1.md  hdf5-1.2.md  hdf5-1.3.md  hdf5-1.4.md  hdf5.Rmd  hdf5.md  json-1.0.md  json-1.1.md  json-1.2.md  json.Rmd  json.md  misc.md
include/uzuki2/: Dummy.hpp  ExternalTracker.hpp  ParsedList.hpp  Version.hpp  interfaces.hpp  parse.hpp  parse_hdf5.hpp  parse_json.hpp  utils.hpp  uzuki2.hpp  validate.hpp
tests/: CMakeLists.txt
tests/src/: boolean.cpp  date.cpp  datetime.cpp  error.h  external.cpp  factor.cpp  integer.cpp  json.cpp  list.cpp  misc.cpp  number.cpp  string.cpp  test_subclass.h  utils.h  vls.cpp
